--- a/task2.ipynb
+++ b/task2.ipynb
@@ -452,6 +452,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Plot outliers"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 67,
    "metadata": {},
@@ -608,6 +615,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Remove Outliers"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 68,
    "metadata": {},
@@ -704,6 +718,13 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Different value for Lambda"
+   ]
   },
   {
    "cell_type": "code",
@@ -942,18 +963,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Graphs should be 45 degree angle with same x and y coordinates"
+   ]
   }
  ],
  "metadata": {
