--- a/task2.ipynb
+++ b/task2.ipynb
@@ -968,6 +968,22 @@
    "source": [
     "### Graphs should be 45 degree angle with same x and y coordinates"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Comaprison between the MSE and MAE of the three regressions\n",
+    "<div>Linear Regression: MSE: 3587866775.9929395, MAE: 43781.19841556169 </div>\n",
+    "<div>Lasso Regression:  MSE: 3587782158.6331534, MAE: 43781.78240395938 </div>\n",
+    "<div>Ridge Regression:  MSE: 3587409575.2501154, MAE: 43784.83106369291 </div>\n",
+    "<p>The very small differences in both MSE and MAE suggest that, for this particular dataset and set of models, the effect of regularization (Lasso vs. Ridge) on the overall prediction performance is minimal. Ridge slightly outperforms the others in terms of MSE, but the MAE remains consistent across all models, which could imply that the choice of regularization method does not drastically alter the error structure.</p>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
